--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Home">
+<Layout title="Luma Money">
 	<div class="max-w-7xl mx-auto px-8 max-sm:px-6">
 		<section class="text-center py-20 pb-16 max-w-4xl mx-auto max-md:py-12 max-md:pb-8">
 			<img src="/LumaMoney.svg" alt="Luma Money" class="w-40 h-40 mx-auto mb-8 block max-md:w-[120px] max-md:h-[120px]" />
